ci: update workflow settings

--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -26,14 +26,16 @@ jobs:
           # Options
           user: snickbit
           template: classic
-          base: header, activity, metadata
+          base: activity, metadata
           config_octicon: yes
           config_timezone: America/Detroit
           plugin_habits: yes
+          plugin_habits_trim: yes
+          plugin_habits_charts: yes
           plugin_habits_charts_type: chartist
-          plugin_habits_days: 14
+          plugin_habits_days: 30
           plugin_habits_facts: yes
-          plugin_habits_from: 200
+          plugin_habits_from: 1000
           plugin_introduction: yes
           plugin_introduction_title: yes
           plugin_languages: yes
@@ -41,14 +43,15 @@ jobs:
           plugin_languages_categories: markup, programming
           plugin_languages_colors: github
           plugin_languages_limit: 8
+          plugin_languages_ignored: kotlin
           plugin_languages_recent_categories: markup, programming
-          plugin_languages_recent_days: 14
+          plugin_languages_recent_days: 90
           plugin_languages_recent_load: 300
           plugin_languages_sections: most-used
           plugin_languages_threshold: 0%
           plugin_lines: yes
           plugin_wakatime: yes
-          plugin_wakatime_days: 7
+          plugin_wakatime_days: 30
           plugin_wakatime_limit: 5
           plugin_wakatime_sections: time, languages, languages-graphs, editors
           plugin_wakatime_url: https://wakatime.com
