--- a/package.json
+++ b/package.json
@@ -16,15 +16,22 @@
 		"dist"
 	],
 	"scripts": {
-		"build": "tsup",
+		"build": "tsup --minify --dts",
+		"build:types": "tsc --emitDeclarationOnly --declarationDir dist",
+		"dev": "tsup",
+		"dev:types": "tsc --emitDeclarationOnly --declarationMap --declarationDir .types",
 		"docs": "typedoc",
-		"test": "jest"
+		"test": "jest",
+		"watch": "concurrently -k -c magenta,cyan pnpm:watch:*",
+		"watch:dev": "pnpm run dev --watch",
+		"watch:types": "pnpm run dev:types --watch"
 	},
 	"jest": {
 		"preset": "ts-jest"
 	},
 	"devDependencies": {
 		"@types/jest": "28.1.8",
+		"concurrently": "7.3.0",
 		"jest": "28.1.3",
 		"ts-jest": "28.0.8",
 		"tsup": "6.2.3",
@@ -40,7 +47,6 @@
 			"src/index.ts"
 		],
 		"clean": true,
-		"dts": true,
 		"format": [
 			"esm",
 			"cjs"
