--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
 		"preset": "ts-jest"
 	},
 	"devDependencies": {
+		"@snickbit/eslint-config": "1.3.2",
 		"@types/jest": "28.1.8",
 		"concurrently": "7.3.0",
+		"eslint": "8.22.0",
 		"jest": "28.1.3",
 		"ts-jest": "28.0.8",
 		"tsup": "6.2.3",
