--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"dev:types": "tsc --emitDeclarationOnly --declarationMap --declarationDir .types",
 		"docs": "typedoc",
 		"test": "jest",
+		"test:ci": "jest --ci --onlyChanged",
 		"watch": "concurrently -k -c magenta,cyan pnpm:watch:*",
 		"watch:dev": "pnpm run dev --watch",
 		"watch:types": "pnpm run dev:types --watch"
@@ -33,13 +34,13 @@
 		"@snickbit/eslint-config": "1.3.2",
 		"@types/jest": "28.1.8",
 		"concurrently": "7.3.0",
-		"eslint": "8.23.0",
+		"eslint": "8.22.0",
 		"jest": "28.1.3",
 		"ts-jest": "28.0.8",
 		"tsup": "6.2.3",
 		"typedoc": "0.23.11",
-		"typedoc-plugin-markdown": "3.13.4",
-		"typescript": "4.8.2"
+		"typedoc-plugin-markdown": "3.13.5",
+		"typescript": "4.7.4"
 	},
 	"engines": {
 		"node": ">= 12"
