--- a/package.json
+++ b/package.json
@@ -17,15 +17,12 @@
 	],
 	"scripts": {
 		"build": "tsup --minify --dts",
-		"build:types": "tsc --emitDeclarationOnly --declarationDir dist",
 		"dev": "tsup",
-		"dev:types": "tsc --emitDeclarationOnly --declarationMap --declarationDir .types",
+		"dev:types": "tsc --project tsconfig.types.json",
 		"docs": "typedoc",
 		"test": "jest",
 		"test:ci": "jest --ci --onlyChanged",
-		"watch": "concurrently -k -c magenta,cyan pnpm:watch:*",
-		"watch:dev": "pnpm run dev --watch",
-		"watch:types": "pnpm run dev:types --watch"
+		"watch": "pnpm run dev --watch"
 	},
 	"jest": {
 		"preset": "ts-jest"
@@ -33,7 +30,6 @@
 	"devDependencies": {
 		"@snickbit/eslint-config": "1.3.2",
 		"@types/jest": "28.1.8",
-		"concurrently": "7.3.0",
 		"eslint": "8.22.0",
 		"jest": "28.1.3",
 		"ts-jest": "28.0.8",
@@ -50,6 +46,7 @@
 			"src/index.ts"
 		],
 		"clean": true,
+		"onSuccess": "pnpm run dev:types",
 		"format": [
 			"esm",
 			"cjs"
